[project]
name = 'cjnfuncs'
version = '3.1rc4'
    # 3.1rc4 - Finished cleanup and doc work
    # 3.1rc3 - Testing scrub, doc work
    # 3.1rc2 - Windows fixes and improvements in core, rwt, configman.  Child loggers with support in set_logging_level & periodic_log.  Tests refresh.
    # 3.1rc1 - cleanup.  Last version of core with commented out QueueListener/QueueHandler
    # 3.1b2 - Windows fixes in rwt, and updated mungePath and rwt tests
    # 3.1b1 - setuplogging queue in junk3.py
    # 3.0.1 - Allow '.' in config section names
    # 3.0 - release
    #   added get_next_dt
    #   reworked deployfiles and tests
    #   added rwt_debug
    #   added set/restore_logging_level
    #   added periodic_log
    #   added mungePath set_attributes switch
    # 2.5 - configman config file parser refactor - multi-line, quoted strings support
description = 'A collection of core functions for tool script writing'
readme = 'README.md'
requires-python = '>=3.9'       # RHEL 9 uses 3.9
authors = [ {name = 'Chris Nelson', email = 'github@cjnaz.com'} ]
license = 'MIT'
dependencies = [
    'requests',
    'appdirs >= 1.4',
    'dkimpy',
    'importlib_resources',      # Used in deployfiles.py for all python versions
    'posix-ipc >= 1.1.1; sys_platform == "linux"'
    ]
keywords = ['cjnaz', 'library', 'cjnfuncs']
classifiers = [                             # https://pypi.org/classifiers/
    'Programming Language :: Python :: 3',
    'Topic :: Software Development :: Libraries :: Python Modules',
    ]


# [project.optional-dependencies]
# linux = ["posix-ipc >= 1.1.1; sys_platform == 'linux'"]


[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'


[project.urls]
repository = 'https://github.com/cjnaz/cjnfuncs'


[project.scripts]
resourcelock = 'cjnfuncs.resourcelock:cli'