[project]
name = 'cjnfuncs'
version = '3.2b2'
    # 3.2b2 - resource_lock.set_lock_info and general shared memory str block, persistent_config final with doc
    # 3.2b1 - persistent_config, completed config safe_mode
    # 3.1.2rc1 - Added info logging of posix_ipc.Semaphore/SharedMemory to resource_lock.__init__()
    # 3.1.1 - separate resourcelock_islocked logger, get_next_dt days/weeks offset
    # 3.1 - release
    #   Support for and use of child loggers
    #   deployfiles create empty dir
    #   Windows fixes
    #   config_item() safe_mode switch
    #   mungePath set_attributes from default False
    # 3.0.1 - Allow '.' in config section names
    # 3.0 - release
    #   added get_next_dt
    #   reworked deployfiles and tests
    #   added rwt_debug
    #   added set/restore_logging_level
    #   added periodic_log
    #   added mungePath set_attributes switch
    # 2.5 - configman config file parser refactor - multi-line, quoted strings support
description = 'A collection of core functions for tool script writing'
readme = 'README.md'
requires-python = '>=3.9'       # RHEL 9 uses 3.9
authors = [ {name = 'Chris Nelson', email = 'github@cjnaz.com'} ]
license = 'MIT'
dependencies = [
    'requests',
    'appdirs >= 1.4',
    'dkimpy',
    'importlib_resources',      # Used in deployfiles.py for all python versions
    'posix-ipc >= 1.1.1; sys_platform == "linux"'
    ]
keywords = ['cjnaz', 'library', 'cjnfuncs']
classifiers = [                             # https://pypi.org/classifiers/
    'Programming Language :: Python :: 3',
    'Topic :: Software Development :: Libraries :: Python Modules',
    ]


[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'


[project.scripts]
resourcelock = 'cjnfuncs.resourcelock:cli'


[project.urls]
repository = 'https://github.com/cjnaz/cjnfuncs'


[tool.setuptools.packages.find]
where = ["src"]


# [tool.setuptools]
# include-package-data = true


# [tool.setuptools.package-data]
# '*' = ['fonts/*', 'deployment_files/*']